Maked adaptive menu without javascript

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
         <title>Checkpoints</title>
     </head>
     <body>
-        <header class='header'></header>
+        <header class='header'>
+            <div class='header__menu'>
+                <div class="header__menu__links">
+                    <a href="#" class="header__menu__links-item">Пункт 1</a>
+                    <a href="#" class="header__menu__links-item">Пункт 2</a>
+                </div>
+            </div>
+
+            <div class="header__menu-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </header>
 
         <main class='main'>
             <section class='content'>
@@ -15,6 +29,11 @@
             </section>
         </main>
 
-        <footer class='footer'></footer>
     </body>
 </html>
+
+
+
+
+<!-- 4) Создай адаптивное меню (можно без js), в котором на смартфоне скрываются 
+пункты меню и отображается иконка (бургер) меню. -->
